--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/04/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,10 +84,10 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">101.5<br/>
-            <span class="timestamp">04:40:23 PM</span><br/>
-            54.7<br/>
-            <span class="timestamp">05:52:55 AM</span>
+          <td class="data new_row">65.1<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            64.9<br/>
+            <span class="timestamp">12:01:59 AM</span>
           </td>
           <td class="data new_row">101.5<br/>
             <span class="timestamp">04:40:23 PM (Thursday)</span><br/>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">101.5<br/>
-            <span class="timestamp">04:40:23 PM</span>
+          <td class="data new_row">65.1<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">101.5<br/>
             <span class="timestamp">04:40:23 PM (Thursday)</span>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">54.7<br/>
-            <span class="timestamp">05:52:55 AM</span>
+          <td class="data new_row">64.9<br/>
+            <span class="timestamp">12:01:59 AM</span>
           </td>
           <td class="data new_row">49.7<br/>
             <span class="timestamp">06:21:16 AM (Sunday)</span>
@@ -151,10 +151,10 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">59.0<br/>
-            <span class="timestamp">11:34:14 AM</span><br/>
-            49.5<br/>
-            <span class="timestamp">11:24:11 PM</span>
+          <td class="data new_row">50.8<br/>
+            <span class="timestamp">12:01:45 AM</span><br/>
+            50.3<br/>
+            <span class="timestamp">12:00:16 AM</span>
           </td>
           <td class="data new_row">59.6<br/>
             <span class="timestamp">01:24:38 PM (Wednesday)</span><br/>
@@ -180,10 +180,10 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">93<br/>
-            <span class="timestamp">06:37:07 AM</span><br/>
-            20<br/>
-            <span class="timestamp">04:25:38 PM</span>
+          <td class="data new_row">60<br/>
+            <span class="timestamp">12:01:45 AM</span><br/>
+            59<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">93<br/>
             <span class="timestamp">06:37:07 AM (Thursday)</span><br/>
@@ -209,10 +209,10 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">30.035<br/>
-            <span class="timestamp">08:26:02 AM</span><br/>
-            29.838<br/>
-            <span class="timestamp">04:39:03 PM</span>
+          <td class="data new_row">29.947<br/>
+            <span class="timestamp">12:01:01 AM</span><br/>
+            29.945<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">30.063<br/>
             <span class="timestamp">09:40:02 AM (Wednesday)</span><br/>
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            14<br/>
-            313<br/>
-            <span class="timestamp">06:01:11 PM</span>
+            5<br/>
+            355<br/>
+            <span class="timestamp">12:00:05 AM</span>
           </td>
           <td class="data new_row">
             23<br/>
@@ -304,7 +304,7 @@
           <td class="label">Wind Average</td>
           <td class="units"> mph</td>
           <td class="data new_row">
-            3</td>
+            2</td>
           <td class="data new_row">
             2</td>
           <td class="data new_row">
@@ -317,7 +317,7 @@
         <tr>
           <td class="label">Wind RMS</td>
           <td class="units"> mph</td>
-          <td class="data new_row">4</td>
+          <td class="data new_row">2</td>
           <td class="data new_row">4</td>
           <td class="data new_row">3</td>
           <td class="data new_row">6</td>
@@ -334,8 +334,8 @@
             &#176;
           </td>
           <td class="data new_row">
-            3<br/>
-            1
+            2<br/>
+            354
           </td>
           <td class="data new_row">
             1<br/>
@@ -361,10 +361,10 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            101.9<br/>
-            <span class="timestamp">04:03:02 PM</span><br/>
-            68.2<br/>
-            <span class="timestamp">06:56:02 AM</span>
+            75.6<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            75.5<br/>
+            <span class="timestamp">12:03:01 AM</span>
           </td>
           <td class="data new_row">
             101.9<br/>
@@ -396,10 +396,10 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            57<br/>
-            <span class="timestamp">06:33:01 AM</span><br/>
-            27<br/>
-            <span class="timestamp">06:21:03 PM</span>
+            42<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            42<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             63<br/>
