--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 01:14:00 AM</p>
+    <p class="lastupdate">09/04/2020 01:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">62.5&#176;F</td>
+        <td class="data">62.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">62.5&#176;F</td>
+        <td class="data">62.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">62.5&#176;F</td>
+        <td class="data">62.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.6&#176;F</td>
+        <td class="data">50.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">65%</td>
+        <td class="data">66%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.951 inHg (0.021)</td>
+        <td class="data">29.950 inHg (0.019)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">1 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.1</span><br/>
-          <span title="01:13:23 AM">
-            62.5</span>
+          <span title="01:17:19 AM">
+            62.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:40:23 PM (Thursday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:13:23 AM" class="loval">
-            62.5</span>
+          <span title="01:17:19 AM" class="loval">
+            62.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:16 AM (Sunday)" class="loval">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="01:04:59 AM">
-            50.9</span><br/>
+          <span title="01:14:21 AM">
+            51.0</span><br/>
           <span title="12:46:43 AM">
             50.2</span>
         </td>
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="01:04:59 AM">
-            65</span><br/>
+          <span title="01:14:21 AM">
+            66</span><br/>
           <span title="12:00:01 AM">
             59</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           2<br/>
-          8
+          7
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             75.6</span><br/>
-          <span title="12:38:01 AM">
-            75.4</span>
+          <span title="01:17:01 AM">
+            75.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:03:02 PM (Thursday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 10 hours, 27 minutes</td>
+      <td class="data">2 days, 10 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 10 hours, 27 minutes</td>
+      <td class="data">2 days, 10 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
